// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtnLink renders correctly 1`] = `
<div>
  <a
    class="ant-btn"
    href="/"
  >
    <span>
      bar
    </span>
  </a>
</div>
`;

exports[`BtnLink text 1`] = `
<a
  class="ant-btn"
  data-testid="foo"
  href="/"
>
  <span>
    bar
  </span>
</a>
`;
